fix: too close distance between picture and name
- add padding between picture and name

--- a/_sass/_members.scss
+++ b/_sass/_members.scss
@@ -21,6 +21,7 @@
         }
     }
     .profile-name-pos {
+        padding-top: 20px;
         margin-bottom: 16px;
         text-align: center;
         h3 {
